--- a/index.html
+++ b/index.html
@@ -102,8 +102,11 @@
 							<div class="features">
 								<section>
 									<span class="icon solid major fa-code"></span>
-									<h3>Lorem ipsum amet</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<h3>Programming</h3>
+									<ul>
+										<li>Advanced Level: Python, SQL</li>
+										<li>Basic level: C/C++, Swift, Java, Javascript, HTML/CSS, MongoDB</li>
+									</ul>
 								</section>
 								<section>
 									<span class="icon solid major fa-lock"></span>
