--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 									<h2>Diamond Prices</h2>
 									<p>Regression with a skewed Distribution</p>
 									<ul class="actions">
-										<li><a href="diamond-prices-html.html" class="button">Learn more</a></li>
+										<li><a href="diamond-prices-html.html", target="_blank" class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
