--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
 							<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Alien in America</h2>
-									<p>Market Study for a pharmaceutical company. Finding the hidden pattern in the data</p>
+									<h2>Best Market to Launch a New Product</h2>
+									<p>Finding the best market for a new drug launched by a pharmaceutical company</p>
 									<ul class="actions">
 										<li><a href="generic.html" class="button">Learn more</a></li>
 									</ul>
@@ -86,7 +86,7 @@
 							<div class="content">
 								<div class="inner">
 									<h2>Stroke Prediction</h2>
-									<p>Dealinng with an unbalanced dataset to improve the prediction model</p>
+									<p>Dealing with an unbalanced dataset to improve the prediction model</p>
 									<ul class="actions">
 										<li><a href="generic.html" class="button">Learn more</a></li>
 									</ul>
