--- a/index.html
+++ b/index.html
@@ -111,8 +111,14 @@
 								</section>
 								<section>
 									<span class="icon solid major fa-lock"></span>
-									<h3>Aliquam sed nullam</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<h3>Main Libraries Used</h3>
+									<p>
+										<li>Numpy, Pandas</li>
+										<li>Matplotlib, seaborn, plotly</li>
+										<li>Sklearn, Scipy</li>
+										<li>OpenCV, Tensorflow/Keras, Pytorch</li>
+										<li>And more...</li>
+									</p>
 								</section>
 								<section>
 									<span class="icon solid major fa-cog"></span>
