--- a/index.html
+++ b/index.html
@@ -111,14 +111,14 @@
 								</section>
 								<section>
 									<span class="icon solid major fa-lock"></span>
-									<h3>Main Libraries Used</h3>
-									<p>
+									<h3>Frequently Used Libraries</h3>
+									<ul>
 										<li>Numpy, Pandas</li>
 										<li>Matplotlib, seaborn, plotly</li>
 										<li>Sklearn, Scipy</li>
 										<li>OpenCV, Tensorflow/Keras, Pytorch</li>
 										<li>And more...</li>
-									</p>
+									</ul>
 								</section>
 								<section>
 									<span class="icon solid major fa-cog"></span>
