--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
 							<p>Data Specialist</p>
 							<p>!Portfolio under construction, coming soon</p>
 							<ul class="actions">
-								<li><a href="#one" class="button scrolly">Learn more</a></li>
+								<li><a href="#one" class="button scrolly">Portfolio</a></li>
+								<li><a href="#one" class="button scrolly">Resume</a></li>
 							</ul>
 						</div>
 					</section>
