--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@
 									<h2>Diamond Prices</h2>
 									<p>Regression with a skewed Distribution</p>
 									<ul class="actions">
-										<li><a href="diamond-prices-html.html", target="_blank" class="button">Learn more</a></li>
+										<li><a href="diamond-prices-html.html", target="_blank" class="button">EDA and Model</a></li>
+										<li><a href="generic.html", target="_blank" class="button">About the Project</a></li>
 									</ul>
 								</div>
 							</div>
