--- a/index.html
+++ b/index.html
@@ -87,6 +87,20 @@
 							<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
+									<h2>Energy Consumption Prediction</h2>
+									<p>Predicting the Energy Consumption for the City of Seattle</p>
+									<ul class="actions">
+										<li><a href="Seattle-Energy-Consumption-EDA.html", target="_blank" class="button">EDA</a></li>
+										<li><a href="", target="_blank" class="button">Model</a></li>
+										<li><a href="generic.html", target="_blank" class="button">About the Project</a></li>
+									</ul>
+								</div>
+							</div>
+						</section>
+						<section>
+							<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>
+							<div class="content">
+								<div class="inner">
 									<h2>Stroke Prediction</h2>
 									<p>Dealing with an unbalanced dataset to improve the prediction model</p>
 									<ul class="actions">
