--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 									<h2>Best Market to Launch a New Product</h2>
 									<p>Finding the best market for a new drug launched by a pharmaceutical company</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
+										<li><a href="under-construction.html", target="_blank" class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
@@ -65,7 +65,7 @@
 									<h2>Seoul Bike Share</h2>
 									<p>Finding the most efficent way to fill for missing data and predict the number of user of a product</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
+										<li><a href="under-construction.html" class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
@@ -78,7 +78,7 @@
 									<p>Regression with a skewed Distribution</p>
 									<ul class="actions">
 										<li><a href="diamond-prices-html.html", target="_blank" class="button">EDA and Model</a></li>
-										<li><a href="generic.html", target="_blank" class="button">About the Project</a></li>
+										<li><a href="under-construction.html", target="_blank" class="button">About the Project</a></li>
 									</ul>
 								</div>
 							</div>
@@ -91,8 +91,8 @@
 									<p>Predicting the Energy Consumption for the City of Seattle</p>
 									<ul class="actions">
 										<li><a href="Seattle-Energy-Consumption-EDA.html", target="_blank" class="button">EDA</a></li>
-										<li><a href="", target="_blank" class="button">Model</a></li>
-										<li><a href="generic.html", target="_blank" class="button">About the Project</a></li>
+										<li><a href="under-construction", target="_blank" class="button">Model</a></li>
+										<li><a href="under-construction.html", target="_blank" class="button">About the Project</a></li>
 									</ul>
 								</div>
 							</div>
@@ -104,7 +104,7 @@
 									<h2>Stroke Prediction</h2>
 									<p>Dealing with an unbalanced dataset to improve the prediction model</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
+										<li><a href="under-construction.html" target="_blank" class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
