--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 									<p>Regression with a skewed Distribution</p>
 									<ul class="actions">
 										<li><a href="diamond-prices-html.html", target="_blank" class="button">EDA and Model</a></li>
-										<li><a href="under-construction.html", target="_blank" class="button">About the Project</a></li>
+										<li><a href="about-diamonds.html", target="_blank" class="button">About the Project</a></li>
 									</ul>
 								</div>
 							</div>
