--- a/about-diamonds.html
+++ b/about-diamonds.html
@@ -16,10 +16,9 @@
 
 		<!-- Header -->
 			<header id="header">
-				<a href="index.html" class="title">Hyperspace</a>
+				<a href="index.html" class="title">Alexandre Petit</a>
 				<nav>
 					<ul>
-						<li><a href="index.html">Home</a></li>
 						<li><a href="about-diamonds.html" class="active">About the Project - Diamonds Prices Predictions</a></li>
 					</ul>
 				</nav>
@@ -31,7 +30,7 @@
 				<!-- Main -->
 					<section id="main" class="wrapper">
 						<div class="inner">
-							<h1 class="major">About the Project - Diamonds Prices Predictions</h1>
+							<h1 class="major">About the Project</h1>
 							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
 							<p>This project is based on the diamond dataset (link). The goal is to build a fast diamond price prediction model with information about the carat, diamond quality and color, geometry</p>
 							<p>I decide to ignore the x, y, z columns because we already have information about the carat, the table and depth.</p>
