--- a/under-construction.html
+++ b/under-construction.html
@@ -19,9 +19,7 @@
 				<a href="index.html" class="title">Alexandre Petit</a>
 				<nav>
 					<ul>
-						<li><a href="index.html">Home</a></li>
-						<li><a href="generic.html" class="active">Generic</a></li>
-						<li><a href="elements.html">Elements</a></li>
+						<li><a href="under-construction.html" class="active">Under Construction</a></li>
 					</ul>
 				</nav>
 			</header>
