--- a/index.html
+++ b/index.html
@@ -59,13 +59,14 @@
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
+							<a href="#" class="image"><img src="images/dollar_squarepic.jpg" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Seoul Bike Share</h2>
-									<p>Finding the most efficent way to fill for missing data and predict the number of user of a product</p>
+									<h2>Fake Bills Detector</h2>
+									<p>Creating a fake bills detector based on bills measurements</p>
 									<ul class="actions">
-										<li><a href="under-construction.html" class="button">Learn more</a></li>
+										<li><a href="fake-bills-detection.html" class="button">EDA and Model</a></li>
+										<li><a href="under-construction.html" class="button">About the Project</a></li>
 									</ul>
 								</div>
 							</div>
@@ -93,18 +94,6 @@
 										<li><a href="Seattle-Energy-Consumption-EDA.html", target="_blank" class="button">EDA</a></li>
 										<li><a href="under-construction", target="_blank" class="button">Model</a></li>
 										<li><a href="under-construction.html", target="_blank" class="button">About the Project</a></li>
-									</ul>
-								</div>
-							</div>
-						</section>
-						<section>
-							<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>
-							<div class="content">
-								<div class="inner">
-									<h2>Stroke Prediction</h2>
-									<p>Dealing with an unbalanced dataset to improve the prediction model</p>
-									<ul class="actions">
-										<li><a href="under-construction.html" target="_blank" class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
