--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/dollar_squarepic.jpg" alt="" data-position="top center" /></a>
+							<a href="#" class="image"><img src="images/dollars_squarepic.jpg" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Fake Bills Detector</h2>
