--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/diamonds1_876.jpg" alt="" data-position="25% 25%" /></a>
+							<a href="#" class="image"><img src="images/diamond1_876.jpg" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Diamond Prices</h2>
