--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 									<p>Predicting the Energy Consumption for the City of Seattle</p>
 									<ul class="actions">
 										<li><a href="Seattle-Energy-Consumption-EDA.html", target="_blank" class="button">EDA</a></li>
-										<li><a href="under-construction", target="_blank" class="button">Model</a></li>
+										<li><a href="Seattle-Energy-Consumption-ML.html", target="_blank" class="button">Predictions</a></li>
 										<li><a href="under-construction.html", target="_blank" class="button">About the Project</a></li>
 									</ul>
 								</div>
