--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 					</section>
 
 				<!-- One -->
+				<!-- New drug market (add again later)
 					<section id="one" class="wrapper style2 spotlights">
 						<section>
 							<a href="#" class="image"><img src="images/drugs1_876.jpg" alt="" data-position="center center" /></a>
@@ -58,6 +59,19 @@
 								</div>
 							</div>
 						</section>
+				-->
+						<section>
+							<a href="#" class="image"><img src="images/Oil-Fields-872px.jpg" alt="" data-position="top center" /></a>
+							<div class="content">
+								<div class="inner">
+									<h2>Oil Production by Country</h2>
+									<p>Animated Charts showing how the oil production changes over the years.</p>
+									<ul class="actions">
+										<li><a href="oil-production.html" class="button">Visualizations</a></li>
+									</ul>
+								</div>
+							</div>
+						</section
 						<section>
 							<a href="#" class="image"><img src="images/dollars1_876.jpg" alt="" data-position="top center" /></a>
 							<div class="content">
