--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 									</ul>
 								</div>
 							</div>
-						</section
+						</section>
 						<section>
 							<a href="#" class="image"><img src="images/dollars1_876.jpg" alt="" data-position="top center" /></a>
 							<div class="content">
@@ -132,8 +132,8 @@
 									<span class="icon solid major fa-desktop"></span>
 									<h3>Frequently Used Libraries</h3>
 									<ul>
-										<li>Numpy, Pandas</li>
-										<li>Matplotlib, seaborn, plotly</li>
+										<li>Numpy, Pandas, Polars</li>
+										<li>Matplotlib, Seaborn, Plotly</li>
 										<li>Sklearn, Scipy</li>
 										<li>OpenCV, Tensorflow/Keras, Pytorch</li>
 										<li>And more...</li>
