--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 									<h2>Oil Production by Country</h2>
 									<p>Animated Charts showing how the oil production changes over the years.</p>
 									<ul class="actions">
-										<li><a href="oil-production.html" class="button">Visualizations</a></li>
+										<li><a href="https://vizzu-oil.streamlit.app" target="_blank" class="button">Visualizations</a></li>
 									</ul>
 								</div>
 							</div>
@@ -79,8 +79,8 @@
 									<h2>Fake Bills Detector</h2>
 									<p>Creating a fake bills detector based on bills measurements</p>
 									<ul class="actions">
-										<li><a href="fake-bills-detection.html" class="button">EDA and Model</a></li>
-										<li><a href="under-construction.html" class="button">About the Project</a></li>
+										<li><a href="fake-bills-detection.html", target="_blank" class="button">EDA and Model</a></li>
+										<li><a href="under-construction.html", target="_blank" class="button">About the Project</a></li>
 									</ul>
 								</div>
 							</div>
