--- a/index.html
+++ b/index.html
@@ -46,6 +46,20 @@
 
 				<!-- One -->
 					<section id="one" class="wrapper style2 spotlights">
+						<!-- Enefit Prosumer Challenge -->
+						<section>
+							<a href="#" class="image"><img src="images/enefit-square-400pc.jpg" alt="" data-position="center center" /></a>
+							<div class="content">
+								<div class="inner">
+									<h2>Prediction of Prosumers Behavior</h2>
+									<p>Improving the stability of the electric grid by prediction the energy pattern of "prosumers"</p>
+									<ul class="actions">
+										<li><a href="under-construction.html", target="_blank" class="button">Learn more</a></li>
+									</ul>
+								</div>
+							</div>
+						</section>
+						<--End of Enefit-->
 						<!-- New drug market (add again later)
 						<section>
 							<a href="#" class="image"><img src="images/drugs1_876.jpg" alt="" data-position="center center" /></a>
