--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 					<section id="one" class="wrapper style2 spotlights">
 						<!-- Enefit Prosumer Challenge -->
 						<section>
-							<a href="#" class="image"><img src="images/enefit-square-400px.jpg" alt="" data-position="center center" /></a>
+							<a href="#" class="image"><img src="images/enefit-square-400px.png" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Prediction of Prosumers Behavior</h2>
