--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 									<h2>Prediction of Prosumers Behavior</h2>
 									<p>Improving the stability of the electric grid by prediction the energy pattern of "prosumers"</p>
 									<ul class="actions">
-										<li><a href="under-construction.html", target="_blank" class="button">Learn more</a></li>
+										<li><a href="enefit-prosumer-challenge.html", target="_blank" class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
