--- a/enefit-prosumer-challenge.html
+++ b/enefit-prosumer-challenge.html
@@ -31,8 +31,8 @@
 					<section id="main" class="wrapper">
 						<div class="inner">
 							<h1 class="major">Enefit Prosumer Challenge</h1>
-							<h2 class="major">Predicting the Energy Consumption Pattern of "Prosumers" to Improve the Electric Grid Stability</h2>
-							<span class="image fit"><img src="images/enefit-header.jpg" alt="" /></span>
+							<h3 class="major">Predicting the Energy Consumption Pattern of "Prosumers" to Improve the Electric Grid Stability</h3>
+							<span class="image fit"><img src="images/enefit-header.png" alt="" /></span>
 							<h3 class="major">Goal of the Challenge</h3>
 							<p>The Enefit prosumer Challenge was created to improve the stability of the electric grid in Estonia by predicting the energy pattern of the "prosumers".</p>
 							<h3 class="major">What is a Prosumer?</h3>
