--- a/enefit-prosumer-challenge.html
+++ b/enefit-prosumer-challenge.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Enefit Prosumet Challenge</title>
+		<title>Enefit Prosumer Challenge</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -31,8 +31,8 @@
 					<section id="main" class="wrapper">
 						<div class="inner">
 							<h1 class="major">Enefit Prosumer Challenge</h1>
-							<h3 class="major">Predicting the Energy Consumption Pattern of "Prosumers" to Improve the Electric Grid Stability</h3>
 							<span class="image fit"><img src="images/enefit-header.png" alt="" /></span>
+							<p>Predicting the Energy Consumption Patterns of "Prosumers" to Improve the Power Grid Stability</p>
 							<h3 class="major">Goal of the Challenge</h3>
 							<p>The Enefit prosumer Challenge was created to improve the stability of the electric grid in Estonia by predicting the energy pattern of the "prosumers".</p>
 							<h3 class="major">What is a Prosumer?</h3>
