--- a/enefit-prosumer-challenge.html
+++ b/enefit-prosumer-challenge.html
@@ -39,7 +39,9 @@
 							<p>Prosumer is an umbrella term for productor and consumer. It was coined to speak about the entities that both products and consumes energy. Here, the focus is on electricity. While the main source of electricity produced is solar energy, we should not forget that a small part of the electricity is produced by small wind turbin and other means.</p>
 							<h3 class="major">Beyond the Challenge</h3>
 							<p>The challenge main goal is to improve the stability of the Estonian power grid. To maximize this goal, we should not only predict the behavior of prosumers but also figure out the weaknesses of energy production in Estonia.</p>
-
+							<h3 class="major">Temperature Change & Thermal Inertia</h3>
+							<p>When the temperatures vary outside, the temperature inside of the house does not change as fast. The walls and the floor helps maintain a more constant temperature. Depending on the size, the walls and roof surface area, insulation quality, the house can resist to temperature change for a longer period of time.</p>
+							<p>A high temperature inertia can be advantageous in fall, when it delays the need for heating. However it can be problematic in summer because it becomes hard to cool the structure at night</p>
 						</div>
 					</section>
 
