--- a/nfl-bigdatabowl-24.html
+++ b/nfl-bigdatabowl-24.html
@@ -31,7 +31,7 @@
 					<section id="main" class="wrapper">
 						<div class="inner">
 							<h1 class="major">NFL Big Data Bowl 2024</h1>
-							<span class="image fit"><img src="images/big-data-bowl.jpg" alt="" /></span>
+							<span class="image fit"><img src="images/big-data-bowl.jpeg" alt="" /></span>
 							<h3 class="major">Improving Tackling Technique</h3>
 							<p>This year NFL Big Data Bowl focus on improving the tackle technique efficiency. The goal is to share actionable insight that can be used by NFL trainers to improve their defense</p>
 							<h3 class="major">The Data</h3>
