--- a/index.html
+++ b/index.html
@@ -60,6 +60,20 @@
 							</div>
 						</section>
 						<!--End of Enefit-->
+						<!--Preparing for NFL Big Data Bowl 2024
+						<section>
+							<a href="#" class="image"><img src="images/big-data-bowl-squared.jpeg" alt="" data-position="center center" /></a>
+							<div class="content">
+								<div class="inner">
+									<h2>NFL Big Data Bowl 2024</h2>
+									<p>Helping NFL teams develop better metrics for tackling</p>
+									<ul class="actions">
+										<li><a href="nfl-bigdatabowl-24.html", target="_blank" class="button">Competition Summary</a></li>
+									</ul>
+								</div>
+							</div>
+						</section>
+						-->
 						<!-- New drug market (add again later)
 						<section>
 							<a href="#" class="image"><img src="images/drugs1_876.jpg" alt="" data-position="center center" /></a>
