--- a/enefit-prosumer-challenge.html
+++ b/enefit-prosumer-challenge.html
@@ -48,10 +48,10 @@
 							<p>While heat pumps offer a better efficiency, they are not able to extract temperature from the outside air at extreme temperature.</p>
 							<h3 class="major">How Long Does it Take to Restart a Power Plant?</h3>
 							<p>The time taken to restart a power plant varies a lot depending on the source of energy and the technology used. In the figure below, we can see the time taken by the most common power plant types in the United States.</p>
-							<span class="image fit"><img src="images/American_power_plant_restart_time_2.jpg" alt="" /></span>
+							<span class="image fit"><img src="images/American_power_plant_restart_time_2.JPG" alt="" /></span>
 							<p>As we can see, nuclear power plants are the slowest to restart. It takes more than 12 hours to go to full capacity. Therefore they are not a good solution to compensate the variability of consumption and production from source such as solar and wind.</p>
 							<p>In the second figure, we can see the proportion of time taken to restart the power plant in the United States. Wind and Solar are in the graph to show their part in the energy mix but it is important to note that humans have no control of the output of solar panels and wind turbines.</p>
-							<span class="image fit"><img src="images/American_power_plant_restart_time.jpg" alt="" /></span>
+							<span class="image fit"><img src="images/American_power_plant_restart_time.JPG" alt="" /></span>
 							<h3 class="major">Energy Mix in Estonia</h3>
 							<h3 class="major">Energy Mix in European Union</h3>
 						</div>
