--- a/enefit-prosumer-challenge.html
+++ b/enefit-prosumer-challenge.html
@@ -35,6 +35,8 @@
 							<p>Predicting the Energy Consumption Patterns of "Prosumers" to Improve the Power Grid Stability</p>
 							<h3 class="major">Goal of the Challenge</h3>
 							<p>The Enefit prosumer Challenge was created to improve the stability of the electric grid in Estonia by predicting the energy pattern of the "prosumers".</p>
+							<p>The target column in the data includes consumption and production in separate rows. We can therefore decompose the competition into two parts<ol><li>Predicting the Consumption</li><li>Approximating the Production</li></ol></p>
+							<p>The interesting part here is that predicting the consumption is close to a time-series, calculating the production is on the other hand a physics problem.</p>
 							<h3 class="major">What is a Prosumer?</h3>
 							<p>Prosumer is an umbrella term for productor and consumer. It was coined to speak about the entities that both products and consumes energy. Here, the focus is on electricity. While the main source of electricity produced is solar energy, we should not forget that a small part of the electricity is produced by small wind turbin and other means.</p>
 							<h3 class="major">Beyond the Challenge</h3>
