--- a/index.html
+++ b/index.html
@@ -60,6 +60,24 @@
 							</div>
 						</section>
 						<!--End of Enefit-->
+
+						<!--Seattle City Energy Benchmarking-->
+						<section>
+							<a href="#" class="image"><img src="images/seattle2_876.jpg" alt="" data-position="25% 25%" /></a>
+							<div class="content">
+								<div class="inner">
+									<h2>New Building Energy Benchmarking</h2>
+									<p>Predicting the Energy Consumption of New Building based on their features</p>
+									<ul class="actions">
+										<li><a href="Seattle-Energy-Consumption-EDA.html", target="_blank" class="button">EDA</a></li>
+										<li><a href="Seattle-Energy-Consumption-ML.html", target="_blank" class="button">Predictions</a></li>
+										<li><a href="under-construction.html", target="_blank" class="button">About the Project</a></li>
+									</ul>
+								</div>
+							</div>
+						</section>
+						<!--End of Seattle City Energy Benchmarking-->
+						
 						<!--Preparing for NFL Big Data Bowl 2024
 						<section>
 							<a href="#" class="image"><img src="images/big-data-bowl-squared.jpeg" alt="" data-position="center center" /></a>
@@ -122,20 +140,6 @@
 									<ul class="actions">
 										<li><a href="diamond-prices-html.html", target="_blank" class="button">EDA and Model</a></li>
 										<li><a href="about-diamonds.html", target="_blank" class="button">About the Project</a></li>
-									</ul>
-								</div>
-							</div>
-						</section>
-						<section>
-							<a href="#" class="image"><img src="images/seattle2_876.jpg" alt="" data-position="25% 25%" /></a>
-							<div class="content">
-								<div class="inner">
-									<h2>Energy Consumption Prediction</h2>
-									<p>Predicting the Energy Consumption for the City of Seattle</p>
-									<ul class="actions">
-										<li><a href="Seattle-Energy-Consumption-EDA.html", target="_blank" class="button">EDA</a></li>
-										<li><a href="Seattle-Energy-Consumption-ML.html", target="_blank" class="button">Predictions</a></li>
-										<li><a href="under-construction.html", target="_blank" class="button">About the Project</a></li>
 									</ul>
 								</div>
 							</div>
