adding french version of index

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 							<li><a href="#one">Portfolio</a></li>
 							<li><a href="#two">Skills</a></li>
 							<li><a href="#three">Contact</a></li>
+							<li><a href="index_fr.html">French Portfolio</a></li>
 						</ul>
 					</nav>
 				</div>
