--- a/index_fr.html
+++ b/index_fr.html
@@ -67,12 +67,12 @@
 							<a href="#" class="image"><img src="images/seattle2_876.jpg" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>New Building Energy Benchmarking</h2>
-									<p>Predicting the Energy Consumption of New Building based on their features</p>
+									<h2>Evaluation de la consommation électrique des nouveaux batîments</h2>
+									<p>Evaluation de la consommation des nouveaux batîments en se basant sur leurs caractéristiques</p>
 									<ul class="actions">
-										<li><a href="Seattle-Energy-Consumption-EDA.html", target="_blank" class="button">EDA</a></li>
-										<li><a href="Seattle-Energy-Consumption-ML.html", target="_blank" class="button">Predictions</a></li>
-										<li><a href="under-construction.html", target="_blank" class="button">About the Project</a></li>
+										<li><a href="Seattle-Energy-Consumption-EDA.html", target="_blank" class="button">Exploration des données</a></li>
+										<li><a href="Seattle-Energy-Consumption-ML.html", target="_blank" class="button">Prédictions de la consommation</a></li>
+										<li><a href="under-construction.html", target="_blank" class="button">Découvrir le projet</a></li>
 									</ul>
 								</div>
 							</div>
