changing button name

--- a/index_fr.html
+++ b/index_fr.html
@@ -70,8 +70,8 @@
 									<h2>Evaluation de la consommation électrique des nouveaux batîments</h2>
 									<p>Evaluation de la consommation des nouveaux batîments en se basant sur leurs caractéristiques</p>
 									<ul class="actions">
-										<li><a href="Seattle-Energy-Consumption-EDA.html", target="_blank" class="button">Exploration des données</a></li>
-										<li><a href="Seattle-Energy-Consumption-ML.html", target="_blank" class="button">Prédictions de la consommation</a></li>
+										<li><a href="Seattle-Energy-Consumption-EDA.html", target="_blank" class="button">Les données</a></li>
+										<li><a href="Seattle-Energy-Consumption-ML.html", target="_blank" class="button">Prédictions</a></li>
 										<li><a href="under-construction.html", target="_blank" class="button">Découvrir le projet</a></li>
 									</ul>
 								</div>
